--- a/src/app/pages/landing-page/components/event-block/event-block.component.html
+++ b/src/app/pages/landing-page/components/event-block/event-block.component.html
@@ -1,4 +1,4 @@
-<section class="page-sections mb-4">
+<section class="page-sections mb-5 event-block">
   <div class="container">
     <div class="caption-block">
       <h2 class="main-captions mb-3"> News & Events</h2>
@@ -7,12 +7,13 @@
     </div>
 
     <div class="details-block">
-     <div class="card-group">
+     <div class="card-group mb-4">
       <div class="card">
         <img class="card-img-top" src="assets/img/card-view/CARDIMG3.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
         </div>
       </div>
       <div class="card">
@@ -29,6 +30,10 @@
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
         </div>
       </div>
+    </div>
+
+    <div class="text-center pb-4">
+      <button class="pay-btn btn btn-primary p-2 pr-4 pl-4">View More</button>
     </div>
     </div>
 
