--- a/src/app/pages/landing-page/components/payment-block/payment-block.component.html
+++ b/src/app/pages/landing-page/components/payment-block/payment-block.component.html
@@ -1,4 +1,4 @@
-<section class="page-sections mb-4">
+<section class="page-sections mb-5">
   <div class="container">
     <div class="caption-block">
       <h2 class="main-captions mb-3"> Check & Pay</h2>
@@ -22,6 +22,9 @@
                 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester
                 stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.
               </p>
+              <div class="text-center">
+                <button class="pay-btn btn btn-primary p-2 pr-4 pl-4">Pay Instantly</button>
+              </div>
             </div>
           </ng-template>
         </li>
