--- a/src/app/components/common-footer/common-footer.component.html
+++ b/src/app/components/common-footer/common-footer.component.html
@@ -1,4 +1,4 @@
-<div class="dm_footer">
+<div class="dm_footer mt-4">
   <div class="container">
     <div class="card-group">
       <div class="col">
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div class="copyRight row mb-5">
+    <div aria-label="copyRight information" class="copyRight row mb-5">
       <div class="col m-0">
         <p  class=" m-0">Copyright © 2024 Dubai Municipality, all rights reserved.</p>
         <p  class=" m-0">This site is maintained by the Dubai Municipality.</p>
